------------------------------------------------------------------------
r2124 | gaser | 2022-10-24 11:52:19

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_conf_tools.m
 M cat_progress_bar.m
 M cat_stat_homogeneity.m
 M doc/index.html
 M update_revision.sh


Changed: Renamed the multiple tools to check homogeneity.
Changed: Added description of output to cat_stat_homogeneity.m.
Changed: Updated html doc.
Fixed:   Added try command to waitbar-call in cat_progress_bar to prevent errors
         if progress window was closed.


------------------------------------------------------------------------
r2123 | rdahnke | 2022-10-20 10:53:46

Changed paths:
 M CHANGES.txt
 M cat_batch_long.m
 M cat_batch_long.sh
 M cat_conf_long.m


Fixed:  Corrected handling of printlong variable in long shell batch.
------------------------------------------------------------------------
r2122 | gaser | 2022-10-18 17:26:11

Changed paths:
 M CHANGES.txt
 M doc/css/main.css
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2121 | gaser | 2022-10-18 15:34:39

Changed paths:
 M CHANGES.txt
 M Makefile
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2120 | gaser | 2022-10-18 12:44:04

Changed paths:
 M CHANGES.txt
 M doc/index.html


Changed: Updated CAT12 HTML documentation.

------------------------------------------------------------------------
r2118 | gaser | 2022-10-18 11:04:54

Changed paths:
 M .gitattributes
 M CHANGES.txt
 M cat_conf_ROI.m
 M cat_conf_stools.m
 M cat_defaults.m
 M cat_surf_results.m
 M doc/css/main.css
 M doc/index.html
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.nii


Changed: Added support for RGB overlay to cat_surf_results.m using 'rgb' option.
Changed: Moved option for surface resample size to expert mode.
Changed: Updated information about new thalamic nuclei atlas.